# remaro_auv

./: LICENSE  README.md
remaro_auv_control/: CMakeLists.txt  package.xml
remaro_auv_control/launch/: start_auv_teleop.launch  start_auv_trajectory_control.launch  start_control_allocator.launch  start_nmb_sm_control.launch
remaro_auv_control/rviz/: remaro_auv_control.rviz
remaro_auv_description/: CMakeLists.txt  package.xml
remaro_auv_description/launch/: upload.launch
remaro_auv_description/meshes/: fin.dae  propeller.dae  vehicle_complete.stl  vehicle_cylinder.stl  vehicle_hemispheres.stl
remaro_auv_description/robots/: default.xacro
remaro_auv_description/test/: test_urdf_files.py  test_urdf_files.test
remaro_auv_description/urdf/: actuators.xacro  base.xacro  gazebo.xacro  snippets.xacro
remaro_auv_gazebo/: CMakeLists.txt  package.xml
