<?xml version="1.0"?>
<package format="2">
  <name>remaro_auv_description</name>
  <version>0.1.6</version>
  <description>Robot description files for the REMARO AUV.</description>

  <maintainer email="jcoffelt@rosen-group.com">Jeremy Coffelt</maintainer>

  <author email="jcoffelt@rosen-group.com">Jeremy Coffelt</author>

  <license>Apache-2.0</license>

  <exec_depend>uuv_descriptions</exec_depend>
  <exec_depend>uuv_gazebo_ros_plugins</exec_depend>
  <exec_depend>uuv_sensor_ros_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>uuv_assistants</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>rostest</test_depend>
  <test_depend>xacro</test_depend>
  <test_depend>rosunit</test_depend>
</package>
